--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-     <!DOCTYPE html>
+ <!DOCTYPE html>
           <html lang="pt-br">
               <head>
                   <meta charset="UTF-8">
@@ -61,12 +61,10 @@
                              <footer>
                             <div>
                               <p> Siga nossas redes sociais</p>
-                                <nav>
-
+                                <nav class="sociais">
                                <li><a href="https://www.facebook.com/groups/1425146354399730">Facebook</a></li>
                                <li><a href="https://www.instagram.com/colpioxii_maripa/">Instagram</a></li>
                                <li><a href="http://www.mwrpioxii.seed.pr.gov.br/">Contato</a></li>
-
          </nav>
        </div>
                              </footer>
